[package]
name = "gh-label-conductor"
description = "A small CLI utility for updating GitHub project labels from a config file."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0.0-beta.4" }
octorust = "0.1"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
itertools = "0.10"

tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["parking_lot"] }

miette = "1"
thiserror = "1"
anyhow = "1"
